--- a/scss/components/_proyecto.scss
+++ b/scss/components/_proyecto.scss
@@ -35,13 +35,17 @@
         }
     }
     h2{
-        padding-bottom: 30px;
+        @extend %titulo;
+        font-size: 50px;
+        text-shadow: 5px 5px 10px black;
+        padding-inline: 20px;
+/*         padding-bottom: 30px;
         background-color:rgb(112, 128, 144) ;
         font-size: 50px;
         font-weight: 600;
         color: black;
         text-shadow: 5px 5px 10px #2e2e2e;
-        text-align: center;
+        text-align: center; */
     }
     div{
         width: auto;
