--- a/scss/base/_operaciones.scss
+++ b/scss/base/_operaciones.scss
@@ -1,3 +1,9 @@
+/*           VARIABLES                 */
+
+$colores: rgb(153, 142, 142), rgb(112, 128, 144), rgb(206, 191, 191), rgb(224, 224, 224);
+
+
+
 %titulo{
     color: white;
     font-size: 30px;
