--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,5 @@
 header {
-    background: rgb(112,128,144);
+    background: nth($colores , 2 );
     background: linear-gradient(180deg, rgba(112,128,144,1) 32%, rgba(125,139,153,0.9374124649859944) 62%, rgba(224,224,224,1) 100%);
     nav {
         div {
@@ -16,9 +16,9 @@ header {
                     width: 600px;
                     justify-content: space-between;
                     margin-right: 50px;
-
+                    
                     li {
-                        background-color: rgb(206, 191, 191);
+                        background-color: nth($colores , 3 );
                         margin: 10px;
                         box-sizing: content-box;
                         border: solid #000000 5px;
@@ -27,10 +27,12 @@ header {
                         text-align: center;
                         border-style: groove;
                         align-self: center;
+                        transition: .2s .1s linear;
 
                         &:hover {
                             border: solid white 5px;
                             border-style: groove;
+                            transform: scale(1.2);
                         }
 
                         a {
