--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -123,7 +123,9 @@
             }
         }
         .barra{
+            display: flex;
             justify-content:center;
+            align-items: center;
             p{
                 font-weight: 300;
                 font-size: 20px;
